feat: add word inspection

--- a/corpus/inspect_tokenized_corpus.ipynb
+++ b/corpus/inspect_tokenized_corpus.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -60,16 +51,16 @@
      "output_type": "stream",
      "text": [
       "176935\n",
-      "{'translation': '顔に涙の跡が白くついて', 'sentence': 'oro nupe kus __hi retar kane an', 'words': ['oro', 'nupe', 'kus', '__hi', 'retar', 'kane', 'an'], 'lemmas': ['or', 'nupe', 'kus', 'hi', 'retar', 'kane', 'an'], 'features': [{'Possessed': 'Yes'}, {'Possessed': 'Yes'}, {}, {}, {}, {}, {}], 'part_of_speech': [['noun'], ['noun'], ['verb'], [], ['verb'], ['parti', 'auxverb', 'noun'], ['parti', 'verb', 'root']], 'glosses': [['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す'], ['涙'], ['～を通る'], [], ['白い'], ['鉄金属'], ['夜']]}\n",
-      "{'translation': '死ぬまでそこで…\\u3000', 'sentence': 'onne pak oro...', 'words': ['onne', 'pak', 'oro', '...'], 'lemmas': ['onne', 'pak', 'or', '...'], 'features': [{}, {}, {'Possessed': 'Yes'}, {}], 'part_of_speech': [['verb'], [], ['noun'], []], 'glosses': [['年老いている', '古くなる'], ['罰する'], ['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す'], []]}\n",
-      "{'translation': '声を出しましたが誰も…', 'sentence': 'sihawnuyar=an korka nep ka ahun... ahun...', 'words': ['sihawnuyar', '=an', 'korka', 'nep', 'ka', 'ahun', '...', 'ahun', '...'], 'lemmas': ['sihawnuyar', '=an', 'korka', 'nep', 'ka', 'ahun', '...', 'ahun', '...'], 'features': [{}, {}, {}, {}, {'Possessed': 'Yes'}, {}, {}, {}, {}], 'part_of_speech': [[], ['verb', 'suffix'], ['parti'], ['noun'], ['parti', 'noun'], ['verb'], [], ['verb'], []], 'glosses': [[], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称', '一人称{{p', '二人称{{s}}/{{p}}・敬称'], ['～けれども', '～が', '～けど', 'しかし'], ['何'], ['～も', '～までも'], ['おくりがな|入|る|はいる'], [], ['おくりがな|入|る|はいる'], []]}\n",
-      "{'translation': '私は眠っていたようでした。ですが', 'sentence': \"mokor=an ruwe ne haw'an ... ruwe ne awa\", 'words': ['mokor', '=an', 'ruwe', 'ne', \"haw'an\", '...', 'ruwe', 'ne', 'awa'], 'lemmas': ['mokor', '=an', 'ru', 'ne', \"haw'an\", '...', 'ru', 'ne', 'awa'], 'features': [{}, {}, {'Possessed': 'Yes'}, {}, {}, {}, {'Possessed': 'Yes'}, {}, {}], 'part_of_speech': [['verb'], ['verb', 'suffix'], ['verb', 'noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], [], [], ['verb', 'noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['parti', 'adv']], 'glosses': [['眠る', '寝る'], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称', '一人称{{p', '二人称{{s}}/{{p}}・敬称'], ['太い'], ['～に'], [], [], ['太い'], ['～に'], ['～したら', '～すると']]}\n",
-      "{'translation': 'ぞれぞれ奥さんを持って', 'sentence': 'sinna sinna mat kor wa', 'words': ['sinna', 'sinna', 'mat', 'kor', 'wa'], 'lemmas': ['sinna', 'sinna', 'mat', 'kor', 'wa'], 'features': [{}, {}, {}, {}, {}], 'part_of_speech': [[], [], ['noun'], ['parti', 'verb'], ['parti']], 'glosses': [['別の違う変わる'], ['別の違う変わる'], ['女', '妻'], ['～すると', '～したとき', '～しつつ', '～しながら'], ['～のだよ', '～わ', '～のだ', '～よ']]}\n",
-      "{'translation': '穏やかに人間の国', 'sentence': 'apunno aynumosir ka ta', 'words': ['apunno', 'aynumosir', 'ka', 'ta'], 'lemmas': ['apunno', 'aynumosir', 'ka', 'ta'], 'features': [{}, {}, {'Possessed': 'Yes'}, {}], 'part_of_speech': [['adv'], [], ['parti', 'noun'], ['parti', 'verb']], 'glosses': [['穏かに', '静かに', '無事に'], ['人間の世界', '地上の世界'], ['～も', '～までも'], ['掘る', '汲む', '～を採る']]}\n",
-      "{'translation': '私を見ると家に入り', 'sentence': 'i=nukar rok pe ahun hine', 'words': ['i=', 'nukar', 'rok', 'pe', 'ahun', 'hine'], 'lemmas': ['i=', 'nukar', 'a', 'pe', 'ahun', 'hine'], 'features': [{}, {}, {}, {'Possessed': 'Yes'}, {}, {}], 'part_of_speech': [['prefix'], ['verb'], ['auxverb', 'verb'], ['noun'], ['verb'], ['parti', 'conj']], 'glosses': [['あなた方に', '私達を', '他動詞を自動詞化する', '我々に', '第II類の{{verb}}に付いて', '訳出しない', '動詞に付いて', '尊敬の二人称{{s', '我の', '通常 ci= を使う', '彼の', 'この意味では', '判然と示さず', 'それを', '名詞に付いて', '我を', '感嘆詞の{{pref', '一人称{{s', '私達に', 'さらにそのままの形で名詞に転用できる', '手段方法の不定詞', '誰かを', 'あなたに', '我等の', '～することを', '我等を', '包括的一人称{{p', '私の', '受動態の形式主語', '我に', '分詞形容詞としては', '本来は a=', '本来は不要', '物を', '我等に', '我々を', '一人称{{p', 'あなた方を', 'ひとを', '後続句への押韻による', 'あなたを', '尊敬の二人称{{p', 'それが', '三人称', 'アイヌ文化上の無生物'], [], ['alang=ain'], ['物者'], ['おくりがな|入|る|はいる'], ['してから', 'しているときに', 'それから', '～したとき', '～して', 'なのに', 'そして']]}\n",
-      "{'translation': '父に何度も言って', 'sentence': 'a=onaha eun hawean ranke kor', 'words': ['a=', 'onaha', 'eun', 'hawean', 'ranke', 'kor'], 'lemmas': ['a=', 'ona', 'eun', 'hawean', 'ranke', 'kor'], 'features': [{}, {'Possessed': 'Yes'}, {}, {}, {}, {}], 'part_of_speech': [['prefix', 'verb'], ['noun'], ['adv'], ['verb'], ['auxverb', 'verb'], ['parti', 'verb']], 'glosses': [['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称', '一人称{{p', '二人称{{s}}/{{p}}・敬称'], ['onaの所属形'], ['～まで', '～へ'], ['言う'], ['何度も～する', '繰り返し～する'], ['～すると', '～したとき', '～しつつ', '～しながら']]}\n",
-      "{'translation': '私の家に帰ってくると', 'sentence': 'a=kor cise or_ ta arki=an konno', 'words': ['a=', 'kor', 'cise', 'or_', 'ta', 'arki', '=an', 'konno'], 'lemmas': ['a=', 'kor', 'cise', 'or', 'ta', 'arki', '=an', 'konno'], 'features': [{}, {}, {}, {}, {}, {}, {}, {}], 'part_of_speech': [['prefix', 'verb'], ['parti', 'verb'], ['noun'], [], ['parti', 'verb'], ['verb'], ['verb', 'suffix'], []], 'glosses': [['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称', '一人称{{p', '二人称{{s}}/{{p}}・敬称'], ['～すると', '～したとき', '～しつつ', '～しながら'], ['家'], [], ['掘る', '汲む', '～を採る'], ['来る'], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称', '一人称{{p', '二人称{{s}}/{{p}}・敬称'], []]}\n",
-      "{'translation': '声なので', 'sentence': 'hawehe an pe ne kus', 'words': ['hawehe', 'an', 'pe', 'ne', 'kus'], 'lemmas': ['haw', 'an', 'pe', 'ne', 'kus'], 'features': [{'Possessed': 'Yes'}, {}, {'Possessed': 'Yes'}, {}, {}], 'part_of_speech': [['noun'], ['parti', 'verb', 'root'], ['noun'], ['determiner', 'pron', 'verb', 'parti', 'pronoun'], ['verb']], 'glosses': [['hawの所属形'], ['夜'], ['物者'], ['～に'], ['～を通る']]}\n"
+      "{'translation': '顔に涙の跡が白くついて', 'sentence': 'oro nupe kus __hi retar kane an', 'words': ['oro', 'nupe', 'kus', '__hi', 'retar', 'kane', 'an'], 'lemmas': [['or'], ['nupe'], ['kus'], ['hi'], ['retar'], ['kane', 'kane'], ['an', 'an', 'an']], 'features': [[{'Possessed': 'Yes', 'Valency': '-1'}], [{'Possessed': 'Yes', 'Valency': '-1'}], [{}], [{'Valency': '-1'}], [{}], [{'Valency': '-1'}, {'Valency': '0'}], [{'Valency': '+1', 'Number': 'Sing'}, {'Valency': '0'}, {'Valency': '-1'}]], 'part_of_speech': [['n'], ['n'], ['v'], ['n'], ['v'], ['parti', 'auxv', 'n'], ['parti', 'v', 'root']], 'glosses': [['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す'], ['涙'], ['～を通る'], [], ['白い'], ['鉄金属'], ['夜']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '織田ステノさんの民話(ｱ)姉に虐待された娘と滝の神 （1981）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E7%B9%94%E7%94%B0%E3%82%B9%E3%83%86%E3%83%8E%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29%E5%A7%89%E3%81%AB%E8%99%90%E5%BE%85%E3%81%95%E3%82%8C%E3%81%9F%E5%A8%98%E3%81%A8%E6%BB%9D%E3%81%AE%E7%A5%9E+%EF%BC%881981%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '織田ステノ', 'dialect': '静内'}}\n",
+      "{'translation': '死ぬまでそこで…\\u3000', 'sentence': 'onne pak oro...', 'words': ['onne', 'pak', 'oro', '...'], 'lemmas': [['onne'], [], ['or'], []], 'features': [[{}], [], [{'Possessed': 'Yes', 'Valency': '-1'}], []], 'part_of_speech': [['v'], [], ['n'], []], 'glosses': [['年老いている', '古くなる'], ['罰する'], ['強調する', '～の所', '場所をあらわす名詞の後に置いて', '～の場所として扱えない名詞の後に置いて場所を表す名詞句を作る', '所属形 oro ですでに言及した場所を示す'], []], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '川上まつ子さんの民話(ｱ) 村長の家に嫁いだ貧しい娘とヤナギの神（1987）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E5%B7%9D%E4%B8%8A%E3%81%BE%E3%81%A4%E5%AD%90%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E6%9D%91%E9%95%B7%E3%81%AE%E5%AE%B6%E3%81%AB%E5%AB%81%E3%81%84%E3%81%A0%E8%B2%A7%E3%81%97%E3%81%84%E5%A8%98%E3%81%A8%E3%83%A4%E3%83%8A%E3%82%AE%E3%81%AE%E7%A5%9E%EF%BC%881987%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '川上まつ子', 'dialect': '沙流'}}\n",
+      "{'translation': '声を出しましたが誰も…', 'sentence': 'sihawnuyar=an korka nep ka ahun... ahun...', 'words': ['sihawnuyar', '=an', 'korka', 'nep', 'ka', 'ahun', '...', 'ahun', '...'], 'lemmas': [[], ['=an'], ['korka'], ['nep'], ['ka', 'ka'], ['ahun'], [], ['ahun'], []], 'features': [[], [{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Nom', 'Valency': '-1'}], [{'Valency': '0'}], [{'Valency': '-1'}], [{'Possessed': 'Yes', 'Valency': '-1'}, {'Valency': '0'}], [{'Valency': '+1', 'Number': 'Sing'}], [], [{'Valency': '+1', 'Number': 'Sing'}], []], 'part_of_speech': [[], ['v', 'sfx'], ['parti'], ['n'], ['parti', 'n'], ['v'], [], ['v'], []], 'glosses': [[], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称'], ['～けれども', '～が', '～けど', 'しかし'], ['何'], ['～も', '～までも'], [], [], [], []], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '民話(ｱ)山で拾った男の子（1982）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29%E5%B1%B1%E3%81%A7%E6%8B%BE%E3%81%A3%E3%81%9F%E7%94%B7%E3%81%AE%E5%AD%90%EF%BC%881982%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': None, 'dialect': None}}\n",
+      "{'translation': '私は眠っていたようでした。ですが', 'sentence': \"mokor=an ruwe ne haw'an ... ruwe ne awa\", 'words': ['mokor', '=an', 'ruwe', 'ne', \"haw'an\", '...', 'ruwe', 'ne', 'awa'], 'lemmas': [['mokor'], ['=an'], ['ruwe', 'ru'], ['ne', 'ne', 'ne', 'ne'], [], [], ['ruwe', 'ru'], ['ne', 'ne', 'ne', 'ne'], ['awa']], 'features': [[{}], [{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Nom', 'Valency': '-1'}], [{}, {'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '-1'}, {}, {'Valency': '0'}, {'Valency': '+1'}], [], [], [{}, {'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '-1'}, {}, {'Valency': '0'}, {'Valency': '+1'}], [{'Valency': '0'}]], 'part_of_speech': [['v'], ['v', 'sfx'], ['v', 'n'], ['adn', 'pron', 'v', 'parti', 'pronoun'], [], [], ['v', 'n'], ['adn', 'pron', 'v', 'parti', 'pronoun'], ['parti', 'adv']], 'glosses': [['眠る', '寝る'], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称'], ['太い'], ['～に'], [], [], ['太い'], ['～に'], ['～したら', '～すると']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '民話(ｱ)どこからかやってきたみすぼらしい女（1983）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29%E3%81%A9%E3%81%93%E3%81%8B%E3%82%89%E3%81%8B%E3%82%84%E3%81%A3%E3%81%A6%E3%81%8D%E3%81%9F%E3%81%BF%E3%81%99%E3%81%BC%E3%82%89%E3%81%97%E3%81%84%E5%A5%B3%EF%BC%881983%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': None, 'dialect': None}}\n",
+      "{'translation': 'ぞれぞれ奥さんを持って', 'sentence': 'sinna sinna mat kor wa', 'words': ['sinna', 'sinna', 'mat', 'kor', 'wa'], 'lemmas': [[], [], ['mat'], ['kor', 'kor'], ['wa']], 'features': [[], [], [{'Valency': '-1'}], [{}, {'Valency': '0'}], [{'Valency': '0'}]], 'part_of_speech': [[], [], ['n'], ['parti', 'v'], ['parti']], 'glosses': [['別の違う変わる'], ['別の違う変わる'], ['女', '妻'], ['～すると', '～したとき', '～しつつ', '～しながら'], ['～のだよ', '～わ', '～のだ', '～よ']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '織田ステノさんの民話(ｱ) アイヌにタモギタケを授けた蛇神（1982）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E7%B9%94%E7%94%B0%E3%82%B9%E3%83%86%E3%83%8E%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E3%82%A2%E3%82%A4%E3%83%8C%E3%81%AB%E3%82%BF%E3%83%A2%E3%82%AE%E3%82%BF%E3%82%B1%E3%82%92%E6%8E%88%E3%81%91%E3%81%9F%E8%9B%87%E7%A5%9E%EF%BC%881982%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '織田ステノ', 'dialect': '静内'}}\n",
+      "{'translation': '穏やかに人間の国', 'sentence': 'apunno aynumosir ka ta', 'words': ['apunno', 'aynumosir', 'ka', 'ta'], 'lemmas': [['apunno'], [], ['ka', 'ka'], ['ta', 'ta']], 'features': [[{'Valency': '0'}], [], [{'Possessed': 'Yes', 'Valency': '-1'}, {'Valency': '0'}], [{'Valency': '0'}, {}]], 'part_of_speech': [['adv'], [], ['parti', 'n'], ['parti', 'v']], 'glosses': [['穏かに', '静かに', '無事に'], ['人間の世界', '地上の世界'], ['～も', '～までも'], ['掘る', '汲む', '～を採る']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '川上まつ子さんの民話(ｱ) クモを戒めて妻にしたオコジョ（1987）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E5%B7%9D%E4%B8%8A%E3%81%BE%E3%81%A4%E5%AD%90%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E3%82%AF%E3%83%A2%E3%82%92%E6%88%92%E3%82%81%E3%81%A6%E5%A6%BB%E3%81%AB%E3%81%97%E3%81%9F%E3%82%AA%E3%82%B3%E3%82%B8%E3%83%A7%EF%BC%881987%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '川上まつ子', 'dialect': '沙流'}}\n",
+      "{'translation': '私を見ると家に入り', 'sentence': 'i=nukar rok pe ahun hine', 'words': ['i=', 'nukar', 'rok', 'pe', 'ahun', 'hine'], 'lemmas': [['i='], ['nukar'], ['a', 'rok'], ['pe'], ['ahun'], ['hine']], 'features': [[{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Acc', 'Valency': '-1'}], [{}], [{'Valency': '+1', 'Number': 'Plur'}, {'Valency': '0'}], [{'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '+1', 'Number': 'Sing'}], [{'Valency': '0'}]], 'part_of_speech': [['pfx'], ['v'], ['auxv', 'v'], ['n'], ['v'], ['parti', 'cconj']], 'glosses': [['あなた方に', '私達を', '他動詞を自動詞化する', '我々に', '訳出しない', '動詞に付いて', '我の', '彼の', 'この意味では', '判然と示さず', 'それを', '名詞に付いて', '我を', '私達に', 'さらにそのままの形で名詞に転用できる', '手段方法の不定詞', '誰かを', 'あなたに', '我等の', '～することを', '我等を', '私の', '受動態の形式主語', '我に', '分詞形容詞としては', '本来は不要', '物を', '我等に', '我々を', 'あなた方を', 'ひとを', '後続句への押韻による', 'あなたを', 'それが', '三人称', 'アイヌ文化上の無生物'], [], [], ['物者'], [], ['してから', 'しているときに', 'それから', '～したとき', '～して', 'なのに', 'そして']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '民話(ｱ)夜襲から女たちを救った子グマの神（1981）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29%E5%A4%9C%E8%A5%B2%E3%81%8B%E3%82%89%E5%A5%B3%E3%81%9F%E3%81%A1%E3%82%92%E6%95%91%E3%81%A3%E3%81%9F%E5%AD%90%E3%82%B0%E3%83%9E%E3%81%AE%E7%A5%9E%EF%BC%881981%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': None, 'dialect': None}}\n",
+      "{'translation': '父に何度も言って', 'sentence': 'a=onaha eun hawean ranke kor', 'words': ['a=', 'onaha', 'eun', 'hawean', 'ranke', 'kor'], 'lemmas': [['a='], ['ona'], ['eun'], ['hawean'], ['ranke', 'ranke'], ['kor', 'kor']], 'features': [[{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Erg', 'Valency': '-1'}], [{'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '0'}], [{'Valency': '+1', 'Number': 'Sing'}], [{'Valency': '0'}, {'Valency': '+2', 'Number': 'Sing'}], [{}, {'Valency': '0'}]], 'part_of_speech': [['pfx', 'v'], ['n'], ['adv'], ['v'], ['auxv', 'v'], ['parti', 'v']], 'glosses': [['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称'], ['onaの所属形'], ['～まで', '～へ'], ['言う'], ['何度も～する', '繰り返し～する'], ['～すると', '～したとき', '～しつつ', '～しながら']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '川上まつ子さんの民話(ｱ) 村長の家に嫁いだ貧しい娘とヤナギの神（1987）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E5%B7%9D%E4%B8%8A%E3%81%BE%E3%81%A4%E5%AD%90%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E6%9D%91%E9%95%B7%E3%81%AE%E5%AE%B6%E3%81%AB%E5%AB%81%E3%81%84%E3%81%A0%E8%B2%A7%E3%81%97%E3%81%84%E5%A8%98%E3%81%A8%E3%83%A4%E3%83%8A%E3%82%AE%E3%81%AE%E7%A5%9E%EF%BC%881987%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '川上まつ子', 'dialect': '沙流'}}\n",
+      "{'translation': '私の家に帰ってくると', 'sentence': 'a=kor cise or_ ta arki=an konno', 'words': ['a=', 'kor', 'cise', 'or_', 'ta', 'arki', '=an', 'konno'], 'lemmas': [['a='], ['kor', 'kor'], ['cise'], ['or'], ['ta', 'ta'], ['ek'], ['=an'], []], 'features': [[{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Erg', 'Valency': '-1'}], [{}, {'Valency': '0'}], [{'Valency': '-1'}], [{'Valency': '-1'}], [{'Valency': '0'}, {}], [{'Valency': '+1', 'Number': 'Plur'}], [{'Person': '4', 'Clusivity': 'In', 'Number': 'Plur', 'Case': 'Nom', 'Valency': '-1'}], []], 'part_of_speech': [['pfx', 'v'], ['parti', 'v'], ['n'], ['n'], ['parti', 'v'], ['v'], ['v', 'sfx'], []], 'glosses': [['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称'], ['～すると', '～したとき', '～しつつ', '～しながら'], ['家'], [], ['掘る', '汲む', '～を採る'], ['来る'], ['あなた方が', '誰かが', '人が', '私たちが', '何かが', 'あなたが', '不定称'], []], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '織田ステノさんの民話(ｱ) イペッの上流の村長の息子と醜女の縁談（1982）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E7%B9%94%E7%94%B0%E3%82%B9%E3%83%86%E3%83%8E%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E3%82%A4%E3%83%9A%E3%83%83%E3%81%AE%E4%B8%8A%E6%B5%81%E3%81%AE%E6%9D%91%E9%95%B7%E3%81%AE%E6%81%AF%E5%AD%90%E3%81%A8%E9%86%9C%E5%A5%B3%E3%81%AE%E7%B8%81%E8%AB%87%EF%BC%881982%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '織田ステノ', 'dialect': '静内'}}\n",
+      "{'translation': '声なので', 'sentence': 'hawehe an pe ne kus', 'words': ['hawehe', 'an', 'pe', 'ne', 'kus'], 'lemmas': [['haw'], ['an', 'an', 'an'], ['pe'], ['ne', 'ne', 'ne', 'ne'], ['kus']], 'features': [[{'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '+1', 'Number': 'Sing'}, {'Valency': '0'}, {'Valency': '-1'}], [{'Possessed': 'Yes', 'Valency': '-1'}], [{'Valency': '-1'}, {}, {'Valency': '0'}, {'Valency': '+1'}], [{}]], 'part_of_speech': [['n'], ['parti', 'v', 'root'], ['n'], ['adn', 'pron', 'v', 'parti', 'pronoun'], ['v']], 'glosses': [['hawの所属形'], ['夜'], ['物者'], ['～に'], ['～を通る']], 'metadata': {'book': 'アイヌ語アーカイブ', 'title': '織田ステノさんの民話(ｱ) 姉に虐待され犬になった娘がオコジョ神に助けられる（1977）', 'url': 'https://ainugo.nam.go.jp/search/media?keyword=%22%E7%B9%94%E7%94%B0%E3%82%B9%E3%83%86%E3%83%8E%E3%81%95%E3%82%93%E3%81%AE%E6%B0%91%E8%A9%B1%28%EF%BD%B1%29+%E5%A7%89%E3%81%AB%E8%99%90%E5%BE%85%E3%81%95%E3%82%8C%E7%8A%AC%E3%81%AB%E3%81%AA%E3%81%A3%E3%81%9F%E5%A8%98%E3%81%8C%E3%82%AA%E3%82%B3%E3%82%B8%E3%83%A7%E7%A5%9E%E3%81%AB%E5%8A%A9%E3%81%91%E3%82%89%E3%82%8C%E3%82%8B%EF%BC%881977%EF%BC%89%22&typeCont=on', 'pronoun': 'fourth', 'author': '織田ステノ', 'dialect': '静内'}}\n"
      ]
     }
    ],
@@ -2737,6 +2728,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence_with_ah = []\n",
+    "\n",
+    "for sentence in joined_corpus:\n",
+    "    if \"ah=\" in sentence[\"sentence\"]:\n",
+    "        sentence_with_ah.append(sentence)\n",
+    "\n",
+    "print(len(sentence_with_ah))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
    "outputs": [
@@ -3170,6 +3184,7 @@
    "source": [
     "# for sentence in joined_corpus[:15]:\n",
     "#     print(sentence)\n",
+    "\n",
     "for sentence in joined_corpus:\n",
     "    if \"inkar'\" in sentence[\"sentence\"]:\n",
     "        print(sentence)"
