refactor: fix variable name

--- a/corpus/inspect_tokenized_corpus.ipynb
+++ b/corpus/inspect_tokenized_corpus.ipynb
@@ -37,7 +37,7 @@
     "with open(\n",
     "    \"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\"\n",
     ") as f:\n",
-    "    lines = pickle.load(f)"
+    "    corpus = pickle.load(f)"
    ]
   },
   {
@@ -54,7 +54,7 @@
     }
    ],
    "source": [
-    "print(len(lines))"
+    "print(len(corpus))"
    ]
   },
   {
@@ -102,7 +102,7 @@
     "\n",
     "\n",
     "joined_corpus: list[CorpusItem] = [\n",
-    "    sentence for sentences in lines.values() for sentence in sentences\n",
+    "    sentence for sentences in corpus.values() for sentence in sentences\n",
     "]\n",
     "print(len(joined_corpus))\n",
     "# for sentence in joined_corpus[:15]:\n",
@@ -3278,10 +3278,10 @@
     "    \"./output/ainu_words_hokkaido_traditional.tsv\", \"r\", encoding=\"utf-8\"\n",
     ") as f:\n",
     "    csv_reader = csv.reader(f, delimiter=\"\\t\")\n",
-    "    lines = [row for row in csv_reader]\n",
+    "    corpus = [row for row in csv_reader]\n",
     "\n",
     "with_long_vowel = set()\n",
-    "for line in lines:\n",
+    "for line in corpus:\n",
     "    if re.match(r\"[âîûêô]\", line[0]):\n",
     "        print(line[0])\n",
     "        with_long_vowel.add(line[0])\n",
