refactor: add type annotations

--- a/corpus/inspect_tokenized_corpus.ipynb
+++ b/corpus/inspect_tokenized_corpus.ipynb
@@ -33,11 +33,12 @@
    "outputs": [],
    "source": [
     "import pickle\n",
+    "from utils.corpus import CorpusItem\n",
     "\n",
     "with open(\n",
     "    \"output/annotated_translated_tokenized_corpus_by_book.pkl\", \"rb\"\n",
     ") as f:\n",
-    "    corpus = pickle.load(f)"
+    "    corpus: dict[str, list[CorpusItem]] = pickle.load(f)"
    ]
   },
   {
